Updating configuration files to fit HU update.

--- a/config_generator_hyperupgrades/hu_attributes.cfg
+++ b/config_generator_hyperupgrades/hu_attributes.cfg
@@ -6,38 +6,337 @@
 		{
 			"Protection Upgrades"
 			{
-				"1"	"max_health_additive_bonus"
-				"2"	"health_regen"
-				"3"	"dmg_taken_from_bullets_reduced"
-				"4"	"dmg_taken_from_blast_reduced"
-				"5"	"dmg_taken_from_blast_reduced"
-				"6"	"dmg_taken_from_bullets_reduced"
-				"7"	"dmg_from_melee_increased"
-				"8"	"SET_BONUS:_dmg_from_sentry_reduced"
-				"9"	"dmg_from_ranged_reduced"
-				"10"	"dmg_taken_increased"
-				"11"	"cannot_be_backstabbed"
-				"12"	"SET_BONUS:_no_death_from_headshots"
-				"13"	"knockback_resistance"
-				"14"	"airblast_vulnerability_multiplier"
-				"15"	"drop_health_pack_on_kill"
-				"16"	"health_from_healers_increased"
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
 			}
 			"Physical Upgrades"
 			{
-				"1"	"move_speed_bonus"
-				"2"	"increased_jump_height"
-				"3"	"increased_air_control"
-				"4"	"air_dash_count"
-				"5"	"increase_player_capture_value"
-				"6"	"cancel_falling_damage"
-				"7"	"parachute_attribute"
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"4"	"*Air Dash Count"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
 			}
 			"Ammo Upgrades"
 			{
-				"1"	"maxammo_primary_increased"
-				"2"	"maxammo_secondary_increased"
-				"3"	"ammo_regen"
+				"1"	"*Maxammo Primary Increased"
+				"2"	"*Maxammo Secondary Increased"
+				"3"	"*Ammo Regen"
+			}
+		}
+		"body_soldier"
+		{
+			"Protection Upgrades"
+			{
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
+			}
+			"Physical Upgrades"
+			{
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
+			}
+			"Ammo Upgrades"
+			{
+				"1"	"*Maxammo Primary Increased"
+				"2"	"*Maxammo Secondary Increased"
+				"3"	"*Ammo Regen"
+			}
+		}
+		"body_pyro"
+		{
+			"Protection Upgrades"
+			{
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
+			}
+			"Physical Upgrades"
+			{
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
+			}
+			"Ammo Upgrades"
+			{
+				"1"	"*Maxammo Primary Increased"
+				"2"	"*Maxammo Secondary Increased"
+				"3"	"*Ammo Regen"
+			}
+		}
+		"body_demoman"
+		{
+			"Protection Upgrades"
+			{
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
+			}
+			"Physical Upgrades"
+			{
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
+			}
+			"Ammo Upgrades"
+			{
+				"1"	"*Maxammo Primary Increased"
+				"2"	"*Maxammo Secondary Increased"
+				"3"	"*Ammo Regen"
+			}
+		}
+		"body_heavy"
+		{
+			"Protection Upgrades"
+			{
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
+			}
+			"Physical Upgrades"
+			{
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
+			}
+			"Ammo Upgrades"
+			{
+				"1"	"*Maxammo Primary Increased"
+				"2"	"*Maxammo Secondary Increased"
+				"3"	"*Ammo Regen"
+			}
+		}
+		"body_engineer"
+		{
+			"Protection Upgrades"
+			{
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
+			}
+			"Physical Upgrades"
+			{
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
+			}
+			"Ammo Upgrades"
+			{
+				"1"	"*Maxammo Metal Increased"
+				"2"	"*Metal Regen"
+				"3"	"*Metal Pickup Increased"
+				"4"	"*Maxammo Primary Increased"
+				"5"	"*Maxammo Secondary Increased"
+				"6"	"*Ammo Regen"
+			}
+		}
+		"body_medic"
+		{
+			"Protection Upgrades"
+			{
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
+			}
+			"Physical Upgrades"
+			{
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
+			}
+			"Ammo Upgrades"
+			{
+				"1"	"*Maxammo Primary Increased"
+				"2"	"*Maxammo Secondary Increased"
+				"3"	"*Ammo Regen"
+			}
+		}
+		"body_sniper"
+		{
+			"Protection Upgrades"
+			{
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
+			}
+			"Physical Upgrades"
+			{
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
+			}
+			"Ammo Upgrades"
+			{
+				"1"	"*Maxammo Primary Increased"
+				"2"	"*Maxammo Secondary Increased"
+				"3"	"*Ammo Regen"
+			}
+		}
+		"body_spy"
+		{
+			"Protection Upgrades"
+			{
+				"1"	"*Max Health Bonus"
+				"2"	"*Health Regen"
+				"3"	"*Fire Resistance"
+				"4"	"*Crit Resistance"
+				"5"	"*Blast Resistance"
+				"6"	"*Bullet Resistance"
+				"7"	"*Melee Resistance"
+				"8"	"*Sentry Damage Resistance"
+				"9"	"*Dmg From Ranged Reduced"
+				"10"	"*Dmg Taken Reduced"
+				"11"	"*Cannot Be Backstabbed"
+				"12"	"*No Death From Headshots"
+				"13"	"*Damage Force Reduction"
+				"14"	"*Airblast Vulnerability Multiplier"
+				"15"	"*Drop Health Pack On Kill"
+				"16"	"*Health From Healers Increased"
+			}
+			"Physical Upgrades"
+			{
+				"1"	"*Move Speed Bonus"
+				"2"	"*Increased Jump Height"
+				"3"	"*Increased Air Control"
+				"5"	"*Increase Player Capture Value"
+				"6"	"*Cancel Falling Damage"
+				"7"	"*Parachute Attribute"
+			}
+			"Ammo Upgrades"
+			{
+				"1"	"*Maxammo Primary Increased"
+				"2"	"*Maxammo Secondary Increased"
+				"3"	"*Ammo Regen"
 			}
 		}
 	}
@@ -47,21 +346,21 @@
 		{
 			"Damage Upgrades"
 			{
-				"1"	"damage_bonus"
-				"2"	"heal_on_hit_for_rapidfire"
-				"3"	"heal_on_kill"
-				"4"	"slow_enemy_on_hit"
-				"5"	"reveal_cloaked_victim_on_hit"
-				"6"	"reveal_disguised_victim_on_hit"
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
 			}
 			"Specific Upgrades"
 			{
-				"1"	"fire_rate_bonus"
-				"2"	"faster_reload_rate"
-				"3"	"clip_size_bonus"
-				"4"	"bullets_per_shot_bonus"
-				"5"	"weapon_spread_bonus"
-				"6"	"projectile_penetration"
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Bullets Per Shot Bonus"
+				"5"	"*Weapon Spread Bonus"
+				"6"	"*Projectile Penetration"
 			}
 		}
 	}
@@ -71,18 +370,18 @@
 		{
 			"Damage Upgrades"
 			{
-				"1"	"damage_bonus"
-				"2"	"heal_on_hit_for_rapidfire"
-				"3"	"heal_on_kill"
-				"4"	"slow_enemy_on_hit"
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
 			}
 			"Specific Upgrades"
 			{
-				"1"	"fire_rate_bonus"
-				"2"	"faster_reload_rate"
-				"3"	"clip_size_bonus"
-				"4"	"weapon_spread_bonus"
-				"5"	"projectile_penetration"
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Weapon Spread Bonus"
+				"5"	"*Projectile Penetration"
 			}
 		}
 	}
@@ -92,20 +391,21 @@
 		{
 			"Damage Upgrades"
 			{
-				"1"	"damage_bonus"
-				"2"	"heal_on_hit_for_rapidfire"
-				"3"	"heal_on_kill"
-				"4"	"slow_enemy_on_hit"
-				"5"	"bleeding_duration"
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Bleeding Duration"
 			}
 			"Specific Upgrades"
 			{
-				"1"	"fire_rate_bonus"
-				"2"	"melee_range_multiplier"
-				"3"	"critboost_on_kill"
-				"4"	"crit_from_behind"
-				"5"	"speed_buff_ally"
-				"6"	"mark_for_death"
+				"1"	"*Fire Rate Bonus (Bat)"
+				"2"	"*Melee Bounds Multiplier"
+				"3"	"*Melee Range Multiplier"
+				"4"	"*Critboost On Kill"
+				"5"	"*Crit From Behind"
+				"6"	"*Speed Buff Ally"
+				"7"	"*Mark For Death"
 			}
 		}
 	}
