Updated config files (testing branch)

--- a/config_generator_hyperupgrades/hu_attributes.cfg
+++ b/config_generator_hyperupgrades/hu_attributes.cfg
@@ -227,6 +227,19 @@
 				"5"	"*Maxammo Secondary Increased"
 				"6"	"*Ammo Regen"
 			}
+			"Buildings Upgrades"
+			{
+				"1"	"*Engy Building Health Bonus"
+				"2"	"*Engy Sentry Damage Bonus"
+				"3"	"*Engy Sentry Fire Rate Increased"
+				"4"	"*Engy Sentry Radius Increased"
+				"5"	"*Engy Dispenser Radius Increased"
+				"6"	"*Bidirectional Teleport"
+				"7"	"*Upgrade Rate Decrease"
+				"8"	"*Build Rate Bonus"
+				"9"	"*Building Cost Reduction"
+				"10"	"*Mod Teleporter Cost"
+			}
 		}
 		"body_medic"
 		{
@@ -338,10 +351,39 @@
 				"2"	"*Maxammo Secondary Increased"
 				"3"	"*Ammo Regen"
 			}
+			"Spy Upgrades"
+			{
+				"1"	"*Mult Cloak Meter Consume Rate"
+				"2"	"*Mult Cloak Meter Regen Rate"
+				"3"	"*Mult Cloak Rate"
+				"4"	"*Mult Decloak Rate"
+				"5"	"*Quiet Unstealth"
+			}
 		}
 	}
 	"Primary Upgrades"
 	{
+		"tf_weapon_shotgun"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Bullets Per Shot Bonus"
+				"5"	"*Weapon Spread Bonus"
+				"6"	"*Projectile Penetration"
+			}
+		}
 		"tf_weapon_scattergun"
 		{
 			"Damage Upgrades"
@@ -363,9 +405,202 @@
 				"6"	"*Projectile Penetration"
 			}
 		}
+		"tf_weapon_handgun_scout_primary"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Bullets Per Shot Bonus"
+				"5"	"*Weapon Spread Bonus"
+				"6"	"*Projectile Penetration"
+			}
+		}
+		"tf_weapon_soda_popper"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Bullets Per Shot Bonus"
+				"5"	"*Weapon Spread Bonus"
+				"6"	"*Projectile Penetration"
+			}
+		}
+		"tf_weapon_pep_brawler_blaster"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Bullets Per Shot Bonus"
+				"5"	"*Weapon Spread Bonus"
+				"6"	"*Projectile Penetration"
+			}
+		}
+		"tf_weapon_rocketlauncher"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Slowfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit Major"
+				"5"	"*Damage Blast Push"
+				"6"	"*Mod Mini-crit Airborne"
+				"7"	"*Reveal Cloaked Victim On Hit"
+				"8"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Blast Radius Increased"
+				"5"	"*No Self Blast Dmg"
+				"6"	"*Damage Blast Push"
+				"7"	"*Projectile Speed Increased"
+				"8"	"*Self Dmg Push Force Increased"
+			}
+		}
+		"tf_weapon_rocketlauncher_directhit"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Slowfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit Major"
+				"5"	"*Damage Blast Push"
+				"6"	"*Mod Mini-crit Airborne"
+				"7"	"*Reveal Cloaked Victim On Hit"
+				"8"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Blast Radius Increased"
+				"5"	"*No Self Blast Dmg"
+				"6"	"*Damage Blast Push"
+				"7"	"*Projectile Speed Increased"
+				"8"	"*Self Dmg Push Force Increased"
+			}
+		}
+		"tf_weapon_particle_cannon"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Slowfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit Major"
+				"5"	"*Damage Blast Push"
+				"6"	"*Dmg Bonus Vs Buildings"
+				"7"	"*Mod Mini-crit Airborne"
+				"8"	"*Reveal Cloaked Victim On Hit"
+				"9"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Blast Radius Increased"
+				"5"	"*No Self Blast Dmg"
+				"6"	"*Damage Blast Push"
+				"7"	"*Projectile Speed Increased"
+				"8"	"*Self Dmg Push Force Increased"
+			}
+		}
+		"tf_weapon_rocketlauncher_airstrike"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Slowfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit Major"
+				"5"	"*Damage Blast Push"
+				"6"	"*Mod Mini-crit Airborne"
+				"7"	"*Reveal Cloaked Victim On Hit"
+				"8"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Blast Radius Increased"
+				"5"	"*No Self Blast Dmg"
+				"6"	"*Damage Blast Push"
+				"7"	"*Projectile Speed Increased"
+				"8"	"*Self Dmg Push Force Increased"
+			}
+		}
 	}
 	"Secondary Upgrades"
 	{
+		"tf_weapon_shotgun"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Bullets Per Shot Bonus"
+				"5"	"*Weapon Spread Bonus"
+				"6"	"*Projectile Penetration"
+			}
+		}
+		"tf_weapon_parachute"
+		{
+			"Specific Upgrades"
+			{
+				"1"	"*Bullet Resistance  (L)"
+				"2"	"*Blast Resistance  (L)"
+			}
+		}
 		"tf_weapon_pistol"
 		{
 			"Damage Upgrades"
@@ -374,6 +609,8 @@
 				"2"	"*Heal On Hit For Rapidfire"
 				"3"	"*Heal On Kill"
 				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
 			}
 			"Specific Upgrades"
 			{
@@ -384,9 +621,169 @@
 				"5"	"*Projectile Penetration"
 			}
 		}
+		"tf_weapon_handgun_scout_secondary"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Weapon Spread Bonus"
+				"5"	"*Projectile Penetration"
+			}
+		}
+		"tf_weapon_lunchbox_drink"
+		{
+			"Specific Upgrades"
+			{
+				"1"	"*Recharge Rate Increased"
+			}
+		}
+		"tf_weapon_jar_milk"
+		{
+			"Specific Upgrades"
+			{
+				"1"	"*Recharge Rate Increased"
+				"2"	"*Liquid Duration"
+				"3"	"*Fire Rate Bonus"
+			}
+		}
+		"tf_weapon_cleaver"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Bleeding Duration"
+				"6"	"*Reveal Cloaked Victim On Hit"
+				"7"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Recharge Rate Increased"
+				"2"	"*Fire Rate Bonus"
+			}
+		}
+		"tf_weapon_shotgun_soldier"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Mod Mini-crit Airborne"
+				"6"	"*Reveal Cloaked Victim On Hit"
+				"7"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Bullets Per Shot Bonus"
+				"5"	"*Weapon Spread Bonus"
+				"6"	"*Projectile Penetration"
+			}
+		}
+		"tf_weapon_raygun"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Reveal Cloaked Victim On Hit"
+				"6"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus"
+				"2"	"*Faster Reload Rate"
+				"3"	"*Clip Size Bonus"
+				"4"	"*Weapon Spread Bonus"
+				"5"	"*Projectile Penetration"
+			}
+		}
+		"tf_weapon_buff_item"
+		{
+			"Specific Upgrades"
+			{
+				"1"	"*Increase Buff Duration"
+			}
+		}
+		"tf_boots_sol"
+		{
+			"Specific Upgrades"
+			{
+				"1"	"*Max Health Bonus (H)"
+				"2"	"*Rocket Jump Damage Reduction"
+				"3"	"*Boots Falling Stomp"
+				"4"	"*Blast Resistance  (L)"
+			}
+		}
 	}
 	"Melee Upgrades"
 	{
+		"saxxy"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Bleeding Duration"
+				"6"	"*Reveal Cloaked Victim On Hit"
+				"7"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus (Mel)"
+				"2"	"*Melee Bounds Multiplier"
+				"3"	"*Melee Range Multiplier"
+				"4"	"*Critboost On Kill"
+				"5"	"*Crit From Behind"
+				"6"	"*Speed Buff Ally"
+				"7"	"*Mark For Death"
+			}
+		}
+		"tf_weapon_katana"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Bleeding Duration"
+				"6"	"*Reveal Cloaked Victim On Hit"
+				"7"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus (Mel)"
+				"2"	"*Melee Bounds Multiplier"
+				"3"	"*Melee Range Multiplier"
+				"4"	"*Critboost On Kill"
+				"5"	"*Crit From Behind"
+				"6"	"*Speed Buff Ally"
+				"7"	"*Mark For Death"
+				"8"	"*Mult Patient Overheal Active"
+			}
+		}
 		"tf_weapon_bat"
 		{
 			"Damage Upgrades"
@@ -396,10 +793,85 @@
 				"3"	"*Heal On Kill"
 				"4"	"*Slow Enemy On Hit"
 				"5"	"*Bleeding Duration"
+				"6"	"*Reveal Cloaked Victim On Hit"
+				"7"	"*Reveal Disguised Victim On Hit"
 			}
 			"Specific Upgrades"
 			{
 				"1"	"*Fire Rate Bonus (Bat)"
+				"2"	"*Melee Bounds Multiplier"
+				"3"	"*Melee Range Multiplier"
+				"4"	"*Critboost On Kill"
+				"5"	"*Crit From Behind"
+				"6"	"*Speed Buff Ally"
+				"7"	"*Mark For Death"
+			}
+		}
+		"tf_weapon_bat_wood"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Bleeding Duration"
+				"6"	"*Reveal Cloaked Victim On Hit"
+				"7"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus (Bat)"
+				"2"	"*Recharge Rate Increased"
+				"3"	"*Melee Bounds Multiplier"
+				"4"	"*Melee Range Multiplier"
+				"5"	"*Critboost On Kill"
+				"6"	"*Crit From Behind"
+				"7"	"*Speed Buff Ally"
+				"8"	"*Mark For Death"
+			}
+		}
+		"tf_weapon_bat_giftwrap"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Bleeding Duration"
+				"6"	"*Reveal Cloaked Victim On Hit"
+				"7"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus (Bat)"
+				"2"	"*Recharge Rate Increased"
+				"3"	"*Maxammo Throwable Increased"
+				"4"	"*Melee Bounds Multiplier"
+				"5"	"*Melee Range Multiplier"
+				"6"	"*Critboost On Kill"
+				"7"	"*Crit From Behind"
+				"8"	"*Speed Buff Ally"
+				"9"	"*Mark For Death"
+			}
+		}
+		"tf_weapon_shovel"
+		{
+			"Damage Upgrades"
+			{
+				"1"	"*Damage Bonus"
+				"2"	"*Heal On Hit For Rapidfire"
+				"3"	"*Heal On Kill"
+				"4"	"*Slow Enemy On Hit"
+				"5"	"*Bleeding Duration"
+				"6"	"*Mod Crit While Airborne"
+				"7"	"*Reveal Cloaked Victim On Hit"
+				"8"	"*Reveal Disguised Victim On Hit"
+			}
+			"Specific Upgrades"
+			{
+				"1"	"*Fire Rate Bonus (Mel)"
 				"2"	"*Melee Bounds Multiplier"
 				"3"	"*Melee Range Multiplier"
 				"4"	"*Critboost On Kill"
