--- a/config_generator_hyperupgrades/hu_upgrades.cfg
+++ b/config_generator_hyperupgrades/hu_upgrades.cfg
@@ -117,6 +117,7 @@
 		"Cost"	"10"
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
+		"Limit"	"1"
 		"Alias"	"afterburn_duration_bonus"
 	}
 	"*Afterburn Duration Penalty"
@@ -124,6 +125,7 @@
 		"Cost"	"10"
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
+		"Limit"	"1"
 		"Alias"	"afterburn_duration_penalty"
 	}
 	"*Afterburn Immunity"
@@ -131,6 +133,7 @@
 		"Cost"	"10"
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
+		"Limit"	"1"
 		"Alias"	"afterburn_immunity"
 	}
 	"*Aiming Knockback Resistance"
@@ -551,12 +554,22 @@
 		"Alias"	"bidirectional_teleport"
 		"InitValue"	"0"
 	}
+	"*Blast Dmg To Self Decreased"
+	{
+		"Cost"	"15"
+		"CostIncrease"	"15"
+		"Increment"	"-0.1"
+		"Limit"	"0.1"
+		"InitValue"	"1"
+	}
 	"*Blast Dmg To Self Increased"
 	{
 		"Cost"	"10"
 		"CostIncrease"	"5"
-		"Increment"	"0.1"
+		"Increment"	"0.5"
+		"Limit"	"1"
 		"Alias"	"blast_dmg_to_self_increased"
+		"InitValue"	"10"
 	}
 	"*Blast Radius Decreased"
 	{
@@ -607,7 +620,7 @@
 	{
 		"Cost"	"5"
 		"CostIncrease"	"2"
-		"Increment"	"0.75"
+		"Increment"	"1"
 		"Limit"	"55"
 		"Alias"	"boots_falling_stomp"
 		"InitValue"	"3"
@@ -1494,7 +1507,7 @@
 	}
 	"*Dmg Bonus Vs Buildings"
 	{
-		"Cost"	"80"
+		"Cost"	"40"
 		"CostIncrease"	"16"
 		"Increment"	"0.1"
 		"Limit"	"500"
@@ -1532,6 +1545,15 @@
 		"CostIncrease"	"25"
 		"Increment"	"-0.1"
 		"Limit"	"0.1"
+		"Alias"	"dmg_from_melee_increased"
+		"InitValue"	"1"
+	}
+	"*Melee Resistance (L)"
+	{
+		"Cost"	"25"
+		"CostIncrease"	"25"
+		"Increment"	"-0.1"
+		"Limit"	"0.4"
 		"Alias"	"dmg_from_melee_increased"
 		"InitValue"	"1"
 	}
@@ -1615,6 +1637,15 @@
 		"Alias"	"dmg_taken_from_blast_increased"
 		"InitValue"	"1"
 	}
+	"*Blast Resistance  (L)"
+	{
+		"Cost"	"35"
+		"CostIncrease"	"35"
+		"Increment"	"-0.1"
+		"Limit"	"0.4"
+		"Alias"	"dmg_taken_from_blast_reduced"
+		"InitValue"	"1"
+	}
 	"*Blast Resistance"
 	{
 		"Cost"	"35"
@@ -1631,6 +1662,15 @@
 		"Increment"	"-0.1"
 		"Limit"	"0.1"
 		"Alias"	"dmg_taken_from_bullets_increased"
+		"InitValue"	"1"
+	}
+	"*Bullet Resistance  (L)"
+	{
+		"Cost"	"35"
+		"CostIncrease"	"35"
+		"Increment"	"-0.1"
+		"Limit"	"0.4"
+		"Alias"	"dmg_taken_from_bullets_reduced"
 		"InitValue"	"1"
 	}
 	"*Bullet Resistance"
@@ -1651,6 +1691,15 @@
 		"Alias"	"dmg_taken_from_crit_increased"
 		"InitValue"	"1"
 	}
+	"*Crit Resistance  (L)"
+	{
+		"Cost"	"35"
+		"CostIncrease"	"31"
+		"Increment"	"-0.1"
+		"Limit"	"0.4"
+		"Alias"	"dmg_taken_from_crit_reduced"
+		"InitValue"	"1"
+	}
 	"*Crit Resistance"
 	{
 		"Cost"	"35"
@@ -1667,6 +1716,15 @@
 		"Increment"	"-0.1"
 		"Limit"	"0.1"
 		"Alias"	"dmg_taken_from_fire_increased"
+		"InitValue"	"1"
+	}
+	"*Fire Resistance  (L)"
+	{
+		"Cost"	"35"
+		"CostIncrease"	"35"
+		"Increment"	"-0.1"
+		"Limit"	"0.4"
+		"Alias"	"dmg_taken_from_fire_reduced"
 		"InitValue"	"1"
 	}
 	"*Fire Resistance"
@@ -1754,7 +1812,7 @@
 		"Increment"	"0.1"
 		"Alias"	"duel_loser_account_id"
 	}
-	"*Effect Bar Recharge Rate Increased"
+	"*Recharge Rate Increased"
 	{
 		"Cost"	"25"
 		"CostIncrease"	"18"
@@ -2057,6 +2115,15 @@
 		"CostIncrease"	"15"
 		"Increment"	"-0.1"
 		"Limit"	"0.1"
+		"Alias"	"fire_rate_bonus"
+		"InitValue"	"1"
+	}
+	"*Fire Rate Bonus (Mel)"
+	{
+		"Cost"	"30"
+		"CostIncrease"	"15"
+		"Increment"	"-0.1"
+		"Limit"	"0.3"
 		"Alias"	"fire_rate_bonus"
 		"InitValue"	"1"
 	}
@@ -2835,8 +2902,8 @@
 	}
 	"*Increase Buff Duration"
 	{
-		"Cost"	"100"
-		"CostIncrease"	"35"
+		"Cost"	"20"
+		"CostIncrease"	"10"
 		"Increment"	"0.2"
 		"Limit"	"90"
 		"Alias"	"increase_buff_duration"
@@ -3173,7 +3240,7 @@
 		"Increment"	"0.1"
 		"Alias"	"jarate_description"
 	}
-	"*Jarate Duration"
+	"*Liquid Duration"
 	{
 		"Cost"	"20"
 		"CostIncrease"	"15"
@@ -3432,6 +3499,15 @@
 		"Increment"	"0.1"
 		"Alias"	"max_flame_reflection_count"
 	}
+	"*Max Health Bonus (H)"
+	{
+		"Cost"	"25"
+		"CostIncrease"	"25"
+		"Increment"	"50"
+		"Limit"	"20000"
+		"Alias"	"max_health_additive_bonus"
+		"InitValue"	"0"
+	}
 	"*Max Health Bonus"
 	{
 		"Cost"	"30"
@@ -3466,7 +3542,7 @@
 		"Alias"	"max_pipebombs_increased"
 		"InitValue"	"0"
 	}
-	"*Maxammo Grenades1 Increased"
+	"*Maxammo Throwable Increased"
 	{
 		"Cost"	"30"
 		"CostIncrease"	"15"
@@ -4242,6 +4318,15 @@
 		"CostIncrease"	"5"
 		"Increment"	"0.1"
 		"Alias"	"mult_patient_overheal_penalty_active"
+	}
+	"*Mult Patient Overheal Active"
+	{
+		"Cost"	"40"
+		"CostIncrease"	"20"
+		"Increment"	"0.25"
+		"Limit"	"4"
+		"Alias"	"mult_patient_overheal_penalty_active"
+		"InitValue"	"1"
 	}
 	"*Mult Player Movespeed Active"
 	{
